nullaway_error_952331e0-569e-46fd-ac21-a01e9859eef3.txt
/home/nima/Developer/nullness-benchmarks/litiengine/src/de/gurkenlabs/litiengine/environment/GameWorld.java:253: error: [NullAway] returning @Nullable expression from method with @NonNull return type
    return this.camera;
    ^
    (see http://t.uber.com/nullaway )
